Fixed flex not wrapping properly

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,7 @@ footer {
     display: flex;
     justify-content: center;
     gap: 1vh;
+    flex-wrap: wrap;
 }
 
 .project {
